--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,52 +3,56 @@
 }
 
 .App-logo {
-  height: 120px;
+  height: 12.5%;
   pointer-events: none;
   position: absolute;
   top: 0%;
   left: 0%;
-  margin: 20px;
+  margin: 2.5%;
 }
 .Static-logo {
-  height: 120px;
+  height: 12.5%;
   position: absolute;
   top: 0%;
   left: 30%;
-  margin: 20px;
-
+  margin: 2.5%;
 }
 
 
-.table-container-matches {
-  display: flex;
+.table-container {
   align-items: center;
-  position: absolute;
-  top: 30%;
-  left: 13%;
+  position: fixed;
+  top: 25%;
+  left: 15%;
   width: 50%;
-}
-.table-container-nfts {
-  display: flex;
-  align-items: center;
-  position: absolute;
-  top:60%;
-  left: 13%;
-  width: 50%;
+  max-width: 50%;
 }
 
 table {
   width: 100%;
   height: 100%;
   border-collapse: collapse;
-
+  max-width: 100%;
+  overflow-y: auto;
+  margin-top: 15%;
 }
 
 
 th, td {
   border: 1px solid white;
-  padding: 8px;
+  padding: 0%;
   color: white;
+  font-size: 100%; /* Reducir el tamaño de fuente en pantallas pequeñas */
+
+}
+
+.btn {
+  display: flex;
+  font-size: 5vw; /* Tamaño de fuente en relación con el ancho de la ventana gráfica */
+	padding: 1% 2%;
+	cursor: pointer;
+	transition: all 0.5s ease-in-out;
+	font-size: 100%;
 }
 
 
@@ -60,27 +64,24 @@ th, td {
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(2vmin);
   color: white;
 }
 
 .card {
-  min-height: 10vh;
-  display: flex;
   flex-direction: column;
   align-items: left;
   justify-content: center;
-  font-size: 20px;
+  font-size: 100%;
   color: white;
-  height: 200px;
-  width: 500px;
+  height: 20%;
+  width: 25%;
   justify-content: space-between;
-  margin-bottom: 2px;
+  margin-bottom: 0.25%;
   line-height: 0;
 }
 
@@ -96,7 +97,4 @@ th, td {
   to {
     transform: rotate(360deg);
   }
-}
-body {
-  overflow: hidden;
 }
