--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,12 @@
   text-align: center;
 }
 
+.App-header {
+	background-color: #282c34;
+	min-height: 100vh;
+}
+
+
 .App-logo {
   height: 12.5%;
   pointer-events: none;
@@ -47,12 +53,25 @@ th, td {
 }
 
 .btn {
-  display: flex;
   font-size: 5vw; /* Tamaño de fuente en relación con el ancho de la ventana gráfica */
 	padding: 1% 2%;
 	cursor: pointer;
 	transition: all 0.5s ease-in-out;
 	font-size: 100%;
+  font-weight: bold;
+  background-color: #61dafb;
+  border: none;
+  border-radius: 2%;
+
+}
+.btn:hover {
+	background-color: #61dafbc1;
+}
+
+.txt-span{
+  color: white;
+  font-size: 120%; 
+
 }
 
 
@@ -68,7 +87,7 @@ th, td {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(2vmin);
+  font-size: 110%;
   color: white;
 }
 
@@ -81,12 +100,17 @@ th, td {
   height: 20%;
   width: 25%;
   justify-content: space-between;
-  margin-bottom: 0.25%;
+  margin: 0.05%;
   line-height: 0;
+  padding: 1% 1%;
+  background: rgba(255, 255, 255, 0.168);
+  border-radius: 10%;
 }
 
-.App-link {
-  color: #61dafb;
+
+.card-row {
+	display: flex;
+	gap: 20px;
 }
 
 
@@ -97,4 +121,17 @@ th, td {
   to {
     transform: rotate(360deg);
   }
+}
+body {
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+		sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+code {
+	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+		monospace;
 }
