--- a/client/src/App.css
+++ b/client/src/App.css
@@ -74,6 +74,11 @@ th, td {
 
 }
 
+.select-choice{
+  max-width: 10%;
+  min-width: 10%;
+}
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -94,7 +99,6 @@ th, td {
 .card {
   flex-direction: column;
   align-items: left;
-  justify-content: center;
   font-size: 100%;
   color: white;
   height: 20%;
@@ -105,14 +109,14 @@ th, td {
   padding: 1% 1%;
   background: rgba(255, 255, 255, 0.168);
   border-radius: 10%;
+  
 }
 
 
 .card-row {
 	display: flex;
-	gap: 20px;
+	gap: 2%;
 }
-
 
 @keyframes App-logo-spin {
   from {
