--- a/client/src/App.css
+++ b/client/src/App.css
@@ -38,9 +38,9 @@ table {
   width: 100%;
   height: 100%;
   border-collapse: collapse;
-  max-width: 100%;
+  max-height: 70%;
   overflow-y: auto;
-  margin-top: 15%;
+  margin-top: 5%;
 }
 
 
@@ -78,7 +78,10 @@ th, td {
   max-width: 10%;
   min-width: 10%;
 }
-
+.select-input{
+  max-width: 9.6%;
+  min-width: 9.6%;
+}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -88,7 +91,6 @@ th, td {
 
 .App-header {
   background-color: #282c34;
-  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -97,12 +99,13 @@ th, td {
 }
 
 .card {
+  display: block;
   flex-direction: column;
   align-items: left;
   font-size: 100%;
   color: white;
   height: 20%;
-  width: 25%;
+  width:27.5%;
   justify-content: space-between;
   margin: 0.05%;
   line-height: 0;
