--- a/client/src/App.css
+++ b/client/src/App.css
@@ -59,14 +59,12 @@ th, td {
 	transition: all 0.5s ease-in-out;
 	font-size: 100%;
   font-weight: bold;
-  background-color: #61dafb;
   border: none;
   border-radius: 2%;
+  background-color: #61dafbc1;
 
 }
-.btn:hover {
-	background-color: #61dafbc1;
-}
+
 
 .txt-span{
   color: white;
@@ -104,8 +102,8 @@ th, td {
   align-items: left;
   font-size: 100%;
   color: white;
-  height: 20%;
-  width:27.5%;
+  height: 10vw;
+  width:25vw;
   justify-content: space-between;
   margin: 0.05%;
   line-height: 0;
