--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,10 +3,14 @@
 }
 
 .App-header {
-	background-color: #282c34;
-	min-height: 100vh;
+  background-color: #282c34;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 1vw;
+  color: white;
+  min-height: 100vh;
 }
-
 
 .App-logo {
   height: 12.5%;
@@ -87,33 +91,23 @@ th, td {
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: 110%;
-  color: white;
-}
+
 
 .card {
-  display: block;
+  display: flex;
   flex-direction: column;
   align-items: left;
-  font-size: 100%;
+  font-size: 1vw;
   color: white;
   height: 10vw;
-  width:25vw;
-  justify-content: space-between;
-  margin: 0.05%;
+  width:30vw;
   line-height: 0;
-  padding: 1% 1%;
+  padding: 1vw 2vw;
   background: rgba(255, 255, 255, 0.168);
   border-radius: 10%;
-  
+  top:-15%;
+
 }
-
-
 .card-row {
 	display: flex;
 	gap: 2%;
